--- a/src/assets/styles/base.css
+++ b/src/assets/styles/base.css
@@ -3,3 +3,13 @@
 * {
   font-family: 'Montserrat', sans-serif;
 }
+
+#app {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh;
+
+    & > main {
+        flex-grow: 1;
+    }
+}
